Cambio de color footer
Cambio de color

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       </main>
 
       <footer>
-        <div class="container-fluid bg-dark text-white altoCard">
+        <div class="container-fluid bg-dark text-warning altoCard">
           <div class="row">
             <p class="col text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem beatae ut repellat.</p>
           </div>
