--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
         <form class="altoCard">
           <div class="mb-3">
             <label for="exampleInputEmail" class="form-label">Correo electrónico</label>
-            <input type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp">
+            <input type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Correo">
           </div>
           <div class="mb-3">
             <label for="exampleInputTelefono" class="form-label">Telefono</label>
-            <input type="number" class="form-control" id="exampleInputTelefono">
+            <input type="number" class="form-control" id="exampleInputTelefono" placeholder="Telefono">
           </div>
           <div class="mb-3 form-check">
             <input type="checkbox" class="form-check-input" id="exampleCheck">
@@ -140,9 +140,9 @@
         </form>
 
         <!-- Modal -->
-        <div class="modal  fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal  fade " id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
+            <div class="modal-content bg-dark text-white">
               <div class="modal-header">
                 <h1 class="modal-title fs-5" id="staticBackdropLabel">Envio de formulario</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
